# eventPhotos

./: .dockerignore  .env  .env.dev  .env.prod.example  .env.test  .env.vps.example  .gitignore  CLAUDE.md  LICENSE  README.md  compose.override.yaml  compose.prod.yaml  compose.vps.yaml  compose.yaml  composer.json  deploy.sh  grumphp.yml  importmap.php  phpstan.neon  phpunit.dist.xml  phpunit.xml  rector.php
config/: bundles.php  reference.php  services.yaml
docker/: Dockerfile.prod
inference/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
inference/app/: bib_config.py  bib_parser.py  bib_recognizer.py  clip_config.py  clip_encoder.py  clothing_scene_recognizer.py  crop.py  detect.py  main.py  ocr.py  recognizer.py  schemas.py  vocabulary.py  zero_shot.py
inference/app/text_embeddings/: clothing_colors.json  clothing_types.json  scenes.json
inference/eval/: .gitignore  README.md  labels.example.json  labels_clothing.example.json  metrics_clothing.md  run_eval.py
inference/scripts/: build_text_embeddings.py  export_vision_onnx.py  fetch_weights.sh
inference/tests/: test_bib_parser.py  test_bib_recognizer.py  test_clip_encoder.py  test_clothing_scene_recognizer.py  test_crop.py  test_detect_decode.py  test_detect_models.py  test_extract.py  test_health.py  test_no_disk_writes.py  test_ocr_models.py  test_recognizer.py  test_recognizer_selection.py  test_zero_shot.py
inference/tests/fixtures/: toy_embeddings.json
migrations/: Version20260609165103.php  Version20260609172304.php  Version20260610093535.php  Version20260610124103.php  (+22 more)
(+553 files in other folders)
