[project]
name = "eventphotos-inference"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pillow>=10.4",
    "pydantic>=2.8",
]

[project.optional-dependencies]
test = ["pytest>=8.2", "httpx>=0.27", "httpx2>=2.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
